--- a/src/app/components/modifier-form/modifier-form.component.css
+++ b/src/app/components/modifier-form/modifier-form.component.css
@@ -6,6 +6,16 @@ mat-checkbox{
     /*pointer-events:none;*/
 }
 
+.cancelMatSearche{
+    height: 41px;
+    width: 56px;
+    background: rgb(255, 255, 255);
+    position: absolute;
+    z-index: 122;
+    top: 3px;
+    left: 87%;
+}
+
 #loading{
     position: absolute;
     right: 50%;
