--- a/src/app/components/todo/todo.component.html
+++ b/src/app/components/todo/todo.component.html
@@ -1,5 +1,150 @@
 <app-navbar *ngIf="idUser!=null && is_admin=='ADMIN'"></app-navbar>
 
+<div *ngIf="!hideAdd" class="popup">
+  <button class="btnCancel" (click)="add()">X</button>
+  <br>
+  <div  class="popupHeader">
+    <h2 *ngIf="addButton"  >Ajouter ToDo</h2>
+    <h2 *ngIf="!addButton" >Modifier ToDo</h2>
+    
+  </div>
+  <hr>
+  <div class="popupBody">
+    <form style="margin-left: 10px" [formGroup]="todo">
+        
+      <div class="col-md">
+          <div class="form-group row">
+              <label class="col-sm-4  col-form-label" for="ville"><b>Technicien <small *ngIf="todo.get('user')!.invalid" id="fileHelpId" style="color: red;" class="form-text">*</small> </b></label>
+              <div class="col-sm">
+                  <mat-form-field  style="width: 100%;">
+                      <mat-select formControlName="user" name="user" placeholder="technicien" >
+                        <mat-option>
+                          <ngx-mat-select-search  noEntriesFoundLabel="'Aucun Technicien'" placeholderLabel="Cherche" (keyup)="fUser($event)"></ngx-mat-select-search>
+                          <div id="cancelMatSearche"></div>
+                        </mat-option>
+                        <mat-option *ngFor="let item of User" [value]="item.id">
+                          {{item.name}}
+                        </mat-option>
+                      </mat-select>
+                  </mat-form-field>
+                  
+              </div>
+            
+          </div>
+          <div class="form-group  row">
+              <label class="col-sm-4  col-form-label" for="ville"><b>Ville <small *ngIf="todo.get('ville')!.invalid" id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
+              <div class="col-sm">
+                  <mat-form-field  style="width: 100%;">
+                      <mat-select formControlName="ville" (selectionChange)="onSelectVille($event.value)" name="ville" placeholder="ville" >
+                        <mat-option>
+                          <ngx-mat-select-search  noEntriesFoundLabel="'Aucun Ville'" placeholderLabel="Cherche" (keyup)="fVille($event)"></ngx-mat-select-search>
+                        </mat-option>
+                        <mat-option *ngFor="let item of Ville" [value]="item.id">
+                          {{item.name}}
+                        </mat-option>
+                      </mat-select>
+                  </mat-form-field>
+                  
+              </div>
+            
+            </div>
+            <div class="form-group row">
+                
+                <label class="col-sm-4  col-form-label" for=""><b>Véhicule <small *ngIf="todo.get('vehicule')!.invalid" id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
+                <div class="col-sm">
+                    <mat-form-field style="width: 100%;">
+                        <mat-select formControlName="vehicule" name="vehicule" placeholder="Véhicule" >
+                          <mat-option>
+                            <ngx-mat-select-search noEntriesFoundLabel="'Aucun Véhicule'" placeholderLabel="Cherche" (keyup)="fVehicule($event)"></ngx-mat-select-search>
+                          </mat-option>
+                          <mat-option *ngFor="let item of Vehicule" [value]="item.id">
+                            {{item.name}}
+                          </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                
+                </div>
+                
+            </div>
+        
+            <!--{{newForm | json}}-->
+        
+            <div class="form-group row">
+                <label class="col-sm-4  col-form-label" for=""><b>Produit <small *ngIf="todo.get('produit')!.invalid" id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
+                <div class="col-sm">
+                    <mat-form-field style="width: 100%;">
+                        <mat-select formControlName="produit" (selectionChange)="onSelectProduit($event.value)" name="produit" placeholder="Produit" >
+                          <mat-option>
+                            <ngx-mat-select-search noEntriesFoundLabel="'Aucun Produit'" placeholderLabel="Cherche" (keyup)="fProduit($event)"></ngx-mat-select-search>
+                          </mat-option>
+                          <mat-option *ngFor="let item of Produit" [value]="item.id">
+                            {{item.name}}
+                          </mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                
+              </div>
+            </div>
+            <div class="form-group row">
+              <label class="col-sm-4  col-form-label" for=""><b>Probleme/Panne </b></label>
+              <div class="col-sm">
+                  <mat-form-field style="width: 100%;">
+                      <mat-select formControlName="probleme" (selectionChange)="onSelectProbleme($event.value)" multiple name="probleme" placeholder="Probleme" >
+                        <mat-option>
+                          <ngx-mat-select-search noEntriesFoundLabel="'Aucun Probleme'" placeholderLabel="Cherche" (keyup)="fProbleme($event)"></ngx-mat-select-search>
+                        </mat-option>
+                        <mat-option *ngFor="let item of Probleme" [value]="item.id">
+                          {{item.name}}
+                        </mat-option>
+                      </mat-select>
+                  </mat-form-field>
+                 
+                  
+              </div>
+              
+          </div>
+          <!-- <div class="form-group m-8 row">
+              <label class="col-sm-4  col-form-label" for=""><b>Solution </b></label>
+              <div class="col-sm-5">
+                  <mat-form-field >
+                      <mat-select  formControlName="solution"  name="solution"  multiple placeholder="Solution" >
+                        <mat-option>
+                          <ngx-mat-select-search noEntriesFoundLabel="'Aucun Solution'" placeholderLabel="Cherche"  (keyup)="fSolution($event)"></ngx-mat-select-search>
+                        </mat-option>
+                        <mat-option *ngFor="let item of Solution" [value]="item.id">
+                          {{item.name}}
+                        </mat-option>
+                      </mat-select>
+                  </mat-form-field>
+                  
+                  
+              </div>
+              
+          </div> -->
+          <div class="form-group row py-2">
+              <label class="col-sm-4  col-form-label" for="description"><b>Description</b></label>
+              <div class="col-sm">
+                  <textarea formControlName="description" class="form-control" placeholder="Description de panne" name="description" id="" rows="3"></textarea>
+              </div>
+          </div>
+         
+      </div>
+  </form>
+      
+ 
+  </div>
+  <hr>
+  <div class="popupFouter">
+    <button type="button" style="margin-right: 10px" class="btn btn-secondary" (click)="add()" >Annuler</button>
+          
+    <button type="button" *ngIf="addButton"  (click)="addNew()" [disabled]="todo.invalid "  class="btn btn-success">Ajouter</button>
+    <button type="button" *ngIf="!addButton" class="btn btn-warning"  (click)="modTodo()" [disabled]="todo.invalid" >Modifier</button>
+  </div>
+</div>
+
+<div *ngIf="!hideAdd || !hide" class="backgroundBody">
+
+</div>
 <div id="lamalm" *ngIf="idUser!=null && is_admin=='ADMIN' " class="container mt-5">
 
    
@@ -13,149 +158,10 @@
 
 
 
-    <div *ngIf="!hideAdd" class="popup">
-      <button class="btnCancel" (click)="add()">X</button>
-      <br>
-      <div  class="popupHeader">
-        <h2 *ngIf="addButton"  >Ajouter ToDo</h2>
-        <h2 *ngIf="!addButton" >Modifier ToDo</h2>
-        
-      </div>
-      <hr>
-      <div class="popupBody">
-        <form style="margin-left: 10px" [formGroup]="todo">
-            
-          <div class="col-md">
-              <div class="form-group row">
-                  <label class="col-sm-4  col-form-label" for="ville"><b>Technicien <small *ngIf="todo.get('user')!.invalid" id="fileHelpId" style="color: red;" class="form-text">*</small> </b></label>
-                  <div class="col-sm-5">
-                      <mat-form-field  style="width: 100%;">
-                          <mat-select formControlName="user" name="user" placeholder="technicien" >
-                            <mat-option>
-                              <ngx-mat-select-search  noEntriesFoundLabel="'Aucun Technicien'" placeholderLabel="Cherche" (keyup)="fUser($event)"></ngx-mat-select-search>
-                            </mat-option>
-                            <mat-option *ngFor="let item of User" [value]="item.id">
-                              {{item.name}}
-                            </mat-option>
-                          </mat-select>
-                      </mat-form-field>
-                      
-                  </div>
-                
-              </div>
-              <div class="form-group  row">
-                  <label class="col-sm-4  col-form-label" for="ville"><b>Ville <small *ngIf="todo.get('ville')!.invalid" id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
-                  <div class="col-sm-5">
-                      <mat-form-field  style="width: 100%;">
-                          <mat-select formControlName="ville" (selectionChange)="onSelectVille($event.value)" name="ville" placeholder="ville" >
-                            <mat-option>
-                              <ngx-mat-select-search  noEntriesFoundLabel="'Aucun Ville'" placeholderLabel="Cherche" (keyup)="fVille($event)"></ngx-mat-select-search>
-                            </mat-option>
-                            <mat-option *ngFor="let item of Ville" [value]="item.id">
-                              {{item.name}}
-                            </mat-option>
-                          </mat-select>
-                      </mat-form-field>
-                      
-                  </div>
-                
-                </div>
-                <div class="form-group row">
-                    
-                    <label class="col-sm-4  col-form-label" for=""><b>Véhicule <small *ngIf="todo.get('vehicule')!.invalid" id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
-                    <div class="col-sm-5">
-                        <mat-form-field style="width: 100%;">
-                            <mat-select formControlName="vehicule" name="vehicule" placeholder="Véhicule" >
-                              <mat-option>
-                                <ngx-mat-select-search noEntriesFoundLabel="'Aucun Véhicule'" placeholderLabel="Cherche" (keyup)="fVehicule($event)"></ngx-mat-select-search>
-                              </mat-option>
-                              <mat-option *ngFor="let item of Vehicule" [value]="item.id">
-                                {{item.name}}
-                              </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    
-                    </div>
-                    
-                </div>
-            
-                <!--{{newForm | json}}-->
-            
-                <div class="form-group row">
-                    <label class="col-sm-4  col-form-label" for=""><b>Produit <small *ngIf="todo.get('produit')!.invalid" id="fileHelpId" style="color: red;" class="form-text">*</small></b></label>
-                    <div class="col-sm-5">
-                        <mat-form-field style="width: 100%;">
-                            <mat-select formControlName="produit" (selectionChange)="onSelectProduit($event.value)" name="produit" placeholder="Produit" >
-                              <mat-option>
-                                <ngx-mat-select-search noEntriesFoundLabel="'Aucun Produit'" placeholderLabel="Cherche" (keyup)="fProduit($event)"></ngx-mat-select-search>
-                              </mat-option>
-                              <mat-option *ngFor="let item of Produit" [value]="item.id">
-                                {{item.name}}
-                              </mat-option>
-                            </mat-select>
-                        </mat-form-field>
-                    
-                  </div>
-                </div>
-                <div class="form-group row">
-                  <label class="col-sm-4  col-form-label" for=""><b>Probleme/Panne </b></label>
-                  <div class="col-sm-5">
-                      <mat-form-field style="width: 100%;">
-                          <mat-select formControlName="probleme" (selectionChange)="onSelectProbleme($event.value)" multiple name="probleme" placeholder="Probleme" >
-                            <mat-option>
-                              <ngx-mat-select-search noEntriesFoundLabel="'Aucun Probleme'" placeholderLabel="Cherche" (keyup)="fProbleme($event)"></ngx-mat-select-search>
-                            </mat-option>
-                            <mat-option *ngFor="let item of Probleme" [value]="item.id">
-                              {{item.name}}
-                            </mat-option>
-                          </mat-select>
-                      </mat-form-field>
-                     
-                      
-                  </div>
-                  
-              </div>
-              <!-- <div class="form-group m-8 row">
-                  <label class="col-sm-4  col-form-label" for=""><b>Solution </b></label>
-                  <div class="col-sm-5">
-                      <mat-form-field >
-                          <mat-select  formControlName="solution"  name="solution"  multiple placeholder="Solution" >
-                            <mat-option>
-                              <ngx-mat-select-search noEntriesFoundLabel="'Aucun Solution'" placeholderLabel="Cherche"  (keyup)="fSolution($event)"></ngx-mat-select-search>
-                            </mat-option>
-                            <mat-option *ngFor="let item of Solution" [value]="item.id">
-                              {{item.name}}
-                            </mat-option>
-                          </mat-select>
-                      </mat-form-field>
-                      
-                      
-                  </div>
-                  
-              </div> -->
-              <div class="form-group row py-2">
-                  <label class="col-sm-4  col-form-label" for="description"><b>Description</b></label>
-                  <div class="col-sm-5">
-                      <textarea formControlName="description" class="form-control" placeholder="Description de panne" name="description" id="" rows="3"></textarea>
-                  </div>
-              </div>
-             
-          </div>
-      </form>
-          
-     
-      </div>
-      <hr>
-      <div class="popupFouter">
-        <button type="button" style="margin-right: 10px" class="btn btn-secondary" (click)="add()" >Annuler</button>
-              
-        <button type="button" *ngIf="addButton"  (click)="addNew()" [disabled]="todo.invalid "  class="btn btn-success">Ajouter</button>
-        <button type="button" *ngIf="!addButton" class="btn btn-warning"  (click)="modTodo()" [disabled]="todo.invalid" >Modifier</button>
-      </div>
-    </div>
+   
 
     <div  *ngIf="load != 0" id="delete">
-      <img id="loading" src="../../../assets/loading.gif.gif" width="40px" height="40px">
+      <img id="loading" src="../../../assets/loading.gif.gif" width="60px" height="60px">
     </div>
 
     <div *ngIf="hideAdd && hide" class="container py-4"> 
