--- a/src/app/components/todo/todo.component.css
+++ b/src/app/components/todo/todo.component.css
@@ -36,8 +36,27 @@
     
 }
 
-.popup{
+.backgroundBody{
+    position: fixed;
+    top: 0px;
     z-index: 1;
+    height: 100%;
+    width: 100%;
+    background: #000000ad;
+}
+
+#cancelMatSearche{
+    height: 41px;
+    width: 56px;
+    background: rgb(255, 255, 255);
+    position: absolute;
+    z-index: 122;
+    top: 3px;
+    left: 87%;
+}
+
+.popup{
+    z-index: 2;
     position: fixed;
     right: 50%;
     left: 50%;
@@ -89,7 +108,7 @@
 
 @media only screen and (max-width: 575px) {
     .popup{
-        z-index: 1;
+        z-index: 2;
         position: fixed;
         right: 50%;
         left: 50%;
