--- a/src/app/dash/dash.component.css
+++ b/src/app/dash/dash.component.css
@@ -21,7 +21,7 @@
 }
 
 .Div{
-  height: auto;
+  height: 100%;
   width: auto;
   border: 2px solid rgb(209, 202, 202);
   border-radius: 5px;
@@ -49,4 +49,23 @@ td,th{
 .icon{
   font-size: 40px;
 
+}
+
+
+#delete{
+  z-index: 1;
+  position: fixed;
+  right: 50%;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%,-50%);
+  width: 30%;
+}
+
+#loading{
+  position: absolute;
+  right: 50%;
+  left: 50%;
+  top: 30%;
+  transform: translate(-50%,-50%);
 }
